--- a/index.html
+++ b/index.html
@@ -318,6 +318,27 @@
                         <td data-label="rate">4/10</td>
                         <td data-label="date">2022-08-21</td>
                     </tr>
+                    <tr>
+                        <td data-label="brand">San Pellegrino</td>
+                        <td data-label="flavor">Blood Orange</td>
+                        <td data-label="temp">Room Temp</td>
+                        <td data-label="rate">9/10</td>
+                        <td data-label="date">2022-09-06</td>
+                    </tr>
+                    <tr>
+                        <td data-label="brand">Trader Joes</td>
+                        <td data-label="flavor">Sparkling Pineapple Juice</td>
+                        <td data-label="temp">Room Temp</td>
+                        <td data-label="rate">6/10</td>
+                        <td data-label="date">2022-09-19</td>
+                    </tr>
+                    <tr>
+                        <td data-label="brand">Good and Gather</td>
+                        <td data-label="flavor">Coconut Pineapple</td>
+                        <td data-label="temp">Room Temp</td>
+                        <td data-label="rate">4/10</td>
+                        <td data-label="date">2022-10-06</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
