--- a/index.html
+++ b/index.html
@@ -339,6 +339,20 @@
                         <td data-label="rate">4/10</td>
                         <td data-label="date">2022-10-06</td>
                     </tr>
+                    <tr>
+                        <td data-label="brand">Ca Craft Babe</td>
+                        <td data-label="flavor">Maui Wowie</td>
+                        <td data-label="temp">Unknown</td>
+                        <td data-label="rate">8/10</td>
+                        <td data-label="date">2022-10-10</td>
+                    </tr>
+                    <tr>
+                        <td data-label="brand">Alani Nu</td>
+                        <td data-label="flavor">Witches Brew</td>
+                        <td data-label="temp">Cold</td>
+                        <td data-label="rate">8/10</td>
+                        <td data-label="date">2022-10-18</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
